presentation: fixing new h1 on narrow screens

--- a/slidenoteplayer.css
+++ b/slidenoteplayer.css
@@ -22,6 +22,8 @@
 
   /*for width*/
   --widthGriditem: 48rem;
+
+  --h1scale: 1.3;
 }
 
 /* presentation main rules */
@@ -213,6 +215,9 @@ img.vertical.griditem{
 
 /*extra thin to 1:1*/
 @media only screen and (max-width: 100vh){
+  :root{
+    --h1scale: 1.05;
+  }
   /*div.blocks .ppage.active, div.blocks .ppage{
     display: block;
   }*/
