--- a/themes/colorful.css
+++ b/themes/colorful.css
@@ -129,8 +129,10 @@ ich leg dir hier ein muster vor, in das du deine sachen eintragen kannst. halt e
 .colorful h1.griditem,
 .colorful .griditem h1{
   max-width: 90vw;
-  margin-left:-2em;
-  margin-right:-2em;
+  margin-bottom: calc((var(--h1scale) - 1)*2em);
+  margin-top: calc((var(--h1scale) - 1)*2em + 25vh);
+  transform: scale(var(--h1scale));
+  font-size: calc(1/var(--h1scale)*4em);
 }
 
 .colorful h2,
