--- a/themes/dark.css
+++ b/themes/dark.css
@@ -116,8 +116,10 @@ ich leg dir hier ein muster vor, in das du deine sachen eintragen kannst. halt e
 .dark h1.griditem,
 .dark .griditem h1{
   max-width: 90vw;
-  margin-left:-2em;
-  margin-right:-2em;
+  margin-bottom: calc((var(--h1scale) - 1)*2em);
+  margin-top: calc((var(--h1scale) - 1)*2em + 25vh);
+  transform: scale(var(--h1scale));
+  font-size: calc(1/var(--h1scale)*4em);
 }
 
 
